Fixing z-index

--- a/public/css/application.bulk.scss
+++ b/public/css/application.bulk.scss
@@ -339,13 +339,16 @@ body {
   width: 100% !important; // Video.js tries to overwrite this
   padding-top: 56.25%; // 16:9
   position: relative;
-  background: url(/img/polina.png) center center no-repeat;
+  background: url(/img/sample.png) center center no-repeat;
   -webkit-background-size: cover;
        -o-background-size: cover;
           background-size: cover;
 
   // Aspect ratio
   &.ar-16-9 {
+    padding-top: 56.25%; // 16:9
+  }
+  &.ar-4-3 {
     padding-top: 56.25%; // 16:9
   }
 
@@ -359,6 +362,11 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
+  }
+
+  // Pure html5 video control arent clickble without this
+  #video-pure-html5 {
+    z-index: 9;
   }
 
   .content {
@@ -377,15 +385,26 @@ body {
   }
 }
 
+// Video.js CSS overrides
 
-/*   .video-bg-wrapper {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: url(/img/bg-home.png) center center no-repeat;
-    background-size: cover;
-    overflow: hidden;
+.vjs-default-skin.vjs-big-play-centered .vjs-big-play-button {
+  width: 4em;
+  height: 4em;
+  font-size: 3em;
 
-  } */
+  border: 3px solid #fff;
+  border-radius: 50%;
+  background-color: rgba(24,24,24,.5);
+
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+
+.vjs-default-skin .vjs-big-play-button:before {
+  font-size: 1.45em;
+  line-height: 2.6em !important;
+  text-shadow: none !important;
+  left: 4px !important;
+  color: #fff;
+}
