--- a/public/css/application.css
+++ b/public/css/application.css
@@ -97,11 +97,13 @@ body {
   width: 100% !important;
   padding-top: 56.25%;
   position: relative;
-  background: url(/img/polina.png) center center no-repeat;
+  background: url(/img/sample.png) center center no-repeat;
   -webkit-background-size: cover;
   -o-background-size: cover;
   background-size: cover; }
   .video-bg.ar-16-9 {
+    padding-top: 56.25%; }
+  .video-bg.ar-4-3 {
     padding-top: 56.25%; }
   .video-bg > iframe, .video-bg > video {
     position: absolute;
@@ -111,6 +113,8 @@ body {
     right: 0;
     width: 100%;
     height: 100%; }
+  .video-bg #video-pure-html5 {
+    z-index: 9; }
   .video-bg .content {
     position: absolute;
     padding: 50px;
@@ -124,14 +128,20 @@ body {
     height: 100%;
     text-align: center; }
 
-/*   .video-bg-wrapper {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: url(/img/bg-home.png) center center no-repeat;
-    background-size: cover;
-    overflow: hidden;
+.vjs-default-skin.vjs-big-play-centered .vjs-big-play-button {
+  width: 4em;
+  height: 4em;
+  font-size: 3em;
+  border: 3px solid #fff;
+  border-radius: 50%;
+  background-color: rgba(24, 24, 24, 0.5);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none; }
 
-  } */
+.vjs-default-skin .vjs-big-play-button:before {
+  font-size: 1.45em;
+  line-height: 2.6em !important;
+  text-shadow: none !important;
+  left: 4px !important;
+  color: #fff; }
